# ce-presentations

./: .gitignore  clear-garbage.sh  header.tex
Ausblick - Aufgabe/: complete.tex
presentation-template/: header.tex
termin_1/: presentation_1.fdb_latexmk  presentation_1.fls  presentation_1.tex
termin_1/ce_aufgabe1/: DUT.ucf  DUT.vhd  DUT_timesim.vhd  SG.vhd  TB.vhd  TickGen.vhd  shiftReg.vhd  siebenSeg.vhd  wave.do
termin_2/: presentation_2.tex
termin_4/: presentation_2.tex  presentation_4.tex
termin_4/ce_aufgabe3/: .gitignore
termin_4/ce_aufgabe3/Project/: main.c
termin_4/sinus-kurve/: CMakeLists.txt  data.csv  main.cpp
termin_5/: presentation_5.tex
termin_5/ce_aufgabe3/: Project.uvopt  Project.uvproj
termin_5/sinus-kurve/: main.cpp
termin_7/: presentation_7.tex
termin_8/: __latexindent_temp.tex  presentation_8.tex
termin_9/: presentation_9.tex
